linus page updated
artifacts included.. write-up complete

--- a/linus.html
+++ b/linus.html
@@ -31,7 +31,7 @@
     			</p>
     			</div>
     			<div class="icons">
-    				<figure><img src="images/shoe-sprint-icon@3x.png" alt="Sprint Icon" class="responsive"><figcaption><br>2 Week Sprint</figcaption></figure>
+    				<figure class="icon-1"><img src="images/shoe-sprint-icon@3x.png" alt="Sprint Icon" class="responsive"><figcaption><br>2 Week Sprint</figcaption></figure>
                     <figure><img src="images/group-icon@3x.png" alt="Profile Icon" class="responsive"><figcaption><br>UX Researcher<br>UI Designer<br>Project Manager</figcaption></figure>
     				<figure><img src="images/ios-app-icon@3x.png" alt="iPhone Icon" class="responsive"><figure>iOS Native App</figure></figure>
     			</div>
@@ -56,48 +56,48 @@
     		<div class="challenge-2">
     			<div>
     				<p>
-    					Users are comfortable with making purchases online, but as of 2017, 30% of everything bought online is returned. Businesses are searching for ways to avoid this while also providing the convenience of shopping from their phones.
+    					<strong class="call-text">Users are comfortable with making purchases online, but as of 2017, 30% of everything bought online is returned. Businesses are searching for ways to avoid this while also providing the convenience of shopping from their phones.</strong>
     				</p>
     			</div>
     		</div>
     		<div class="challenge-3">
     			<div class="support">
-    				<img src="images/linus-mobile-website-mockup.png" alt="Linus Mobile Website" class="responsive" height="300" width="200">
+    				<img src="images/linus-mobile-mockup.png" alt="Linus Mobile Website" class="responsive">
     			</div>
     			<div class="challenge-info">
     				<p>
-    				The importance of reaching the average consumer and not just 8% was the reason why I took on the Legit Bud Store website challenge, The consensus of the challenge was to redesign their website with the following in mind:
+    				    With Linus wanting to make a deep connection with its community, they successfully gave us great interest in this project. The agreement for this challenge was to develop an app with the following in mind:
     					<ul class="bullet">
-    						<li>The navigation has to be <strong>clear and concise</strong> to alleviate the rabbit hole of categories</li><br>
-    						<li>Users must be able to go through the checkout and delivery process <strong>seamlessly</strong> without having to learn new methods of payment</li><br>
-    						<li>It has to be <strong>unique, yet feel familiar</strong> to the user in ways of comfort and affordability</li> 
+    						<li>Increase <strong>engagement</strong> with the brand and its community</li><br>
+    						<li>Find a form of technology to <strong>streamline bike customization</strong></li><br>
+    						<li>Adopt the clean asthetic of the website while incorporating a <strong>smooth and consistent checkout flow</strong></li> 
     					</ul>
     				</p>
     			</div>
     		</div>
     		<div class="content pain-point">
     			<div class="pain-1">
-    				<h3>KEY</h3>
+    				<h3><strong>KEY</strong></h3>
     			<p>
-    				Can you think about a time where you visited a site and couldn’t find what you were looking for because the options led you down a path that caused you to eventually give up?
+    				How many times have you ordered an item online only to return it because it wasn't what you expected or didn't fit even though it said it would?
     			</p>
     			</div>
     			<div class="pain-2">
-    				<h3>PAIN</h3>
+    				<h3><strong>PAIN</strong></h3>
     			<p>
-    				What about when you go to buy an item online and you get to the checkout process and start to feel overwhelmed?
+    				What about when a company promotes "personalization", yet there's no way to make the product your own?
     				<ul class="bullet">
-    					<li>Why are there so many fields for promo codes or rebates even though no deals were present on the site?</li><br>
-    					<li>Will adding my phone number cause spam calls?</li><br>
-    					<li><strong>Do I HAVE to create an account?</strong></li><br>
-    					<li>What is Bitcoin?</li>
+    					<li>Am I supposed to guess that this will look great together?</li><br>
+    					<li>Are there any pictures that will at least give me an idea?</li><br>
+    					<li><strong>Did I already order this?</strong></li><br>
+    					<li>Is customization the new word for imagination?</li>
     				</ul>
     			</p>
     			</div>
     			<div class="pain-1">
-    				<h3>POINTS</h3>
+    				<h3><strong>POINTS</strong></h3>
     			<p>
-    				After this long drawn out process, is buying this item even worth it? Studies show that 27% of users will abandon the website if the process is too long and complicated. See Below:
+    				Lastly, have you ever followed that company on social media for the culture only to find out there really isn't one? The social usage motivation with the biggest increase since 2015 is using social to research products and brand's purpose.
     			</p>
     			</div>
     		</div>
@@ -106,25 +106,25 @@
     		<br>
     		<div class="pain-point-2">
     			<div class="support">
-    				<img src="images/lbs-checkout-research.jpg" alt="Infograph" class="responsive">
+    				<img src="images/social-branding@3x.png" alt="Infograph" height="399" width="300" class="responsive">
     			</div>
     			<div>
     				<p>
-    					Users want a quick, common and easy process that avoids unnecessary form fields and the pressure to subscribe and be bombarded with junk mail or advertising calls. My users gave me an idea of what they wanted:
+    					<strong class="call-text">Users tend to buy based soley on emotion and social concious. With the growth of instant gratification, they want to see their choices in real time. That will give them comfort and confidence.</strong>
     				</p>
     			</div>
     		</div>
     		<div class="pain-point-3">
     			<div class="support">
-    				<figure><img src="images/user-interview-quotes@3x.png" alt="Infograph" class="responsive" height="400" width="500"><figcaption>User Interview Quotes</figcaption></figure>
+    				<span class="quotes-2"><strong><em>"I want to find more events in my community to enjoy with my wife."</em></strong></span>
     			</div>
     			<div class="pp3">
     				<p>
-    					So these are the pain points I have to solve:
+    					So here's what we are looking to solve:
     					<ul class="bullet">
-    						<li>How to make a <strong>more appealing and inviting navigation</strong> throughout the site.</li><br>
-    						<li>How to incorporate a more effective and <strong>pleasant checkout flow</strong>.</li><br>
-    						<li>How to accommodate the average buyer to increase sales and traffic to the site while <strong>gaining loyalty.</strong></li>
+    						<li>How to get the brand more <strong>involved</strong> with the community and <strong>social sharing</strong>.</li><br>
+                            <li>How to develop a <strong>fully functional</strong> customization feature that allows users to change/add accessories to the bike of thier choice.</li><br>
+    						<li>How to enhance and <strong>expand Linus's image</strong> that matches our users' self-perception and desires using a mobile app.</li>
     					</ul>
     				</p>
     			</div>
@@ -135,10 +135,10 @@
     				<div>
     				<h3>EXECUTION: THE DESIGN</h3>
     					<p>
-    						To the drawing board I went. The beginning phases of the design started with pen &amp; paper, which ultimately transferred over to hi-fidelity wireframes in Sketch
+    						Challenge accepted. We took to the drawing board to synthesize our findings by fleshing out the feature prioritization. That led us from sketches to Hi-fidelity Wireframes.
     						<br>
     						<br>
-    						<strong>During the design process, my goal was to provide pleasure for all users no matter the lifestyle or need.</strong>
+    						As the person in charge of the UX and UI elements in the design process, my goal was to exhibit the depth of an app ready to launch that ensured our users <strong>have not only a pleasant experience, but a seamless, functional one.</strong>
     					</p>
     				</div>
     				</div>
@@ -146,37 +146,41 @@
     			<div class="design-3">
     				<div class="d3">
     					<p>
-    						The 1st Solution was to give the category photos on the homepage hierarchy over the navigation buttons because it made the users feel more “engaged”.
+                            <br>
+                            <br>
+    						The 1st Solution was to partner up with local businesses and organizations to create events that users would be able to find and participate in directly from the app. 
     					</p>
     				</div>
     				<div class="support">
-    					<img src="images/lbs-laptop-hp-mockup.png" alt="Homepage Mockup" class="responsive">
+    					<img src="images/events-mockup@3x.png" alt="Events Mockup" class="responsive">
     				</div>
     			</div>
     			<div class="design-4">
     				<div class="d3">
     					<p>
-    						The 2nd Solution was to develop a modal checkout flow. It allowed the process to feel conversational and only asked what was necessary to complete the order.
+                            <br>
+                            <br>
+    						The 2nd Solution was to use <strong>Augmented Reality</strong> technology to allow users a way to customize their bikes and see it in real time in their current location.
     					</p>
     				</div>
     				<div class="support">
-    					<img src="images/lbs-laptop-checkout-mockup.png" alt="Checkout Mockup" class="responsive">
+    					<img src="images/ar-fully-mockup@3x.png" alt="AR Mockup" class="responsive">
     				</div>
     			</div>
     			<div class="design-5">
     				<div class="d3">
     					<p>
-    						My last Solution included adding all economy amount types that appealed to the budget friendly cannabis users as well as users who purchased in very large quantities.
+    						My last Solution was to give comfort in the checkout process by adding the ability to add items straight to the cart from the AR platform. That eliminated users having to go find the items after seeing them virtually on their bikes.
     					</p>
     				</div>
     				<div class="support">
-    					<img src="images/lbs-laptop-pd-mockup.png" alt="Product Detail Mockup" class="responsive">
+    					<img src="images/ar-shopping-mockup@3x.png" alt="AR Shopping Mockup" class="responsive">
     				</div>
     			</div>
     		<div class="content prototype">
     			<h3>EXECUTION: THE PROTOTYPE</h3>
     			<p>
-    				Let’s walk through how I solved those particular problems with this clickable prototype that I developed through InVision: 
+    				Let’s walk through how we combined all solutions given with this clickable prototype that I developed through InVision: 
     			</p>
     			<div>
     				<iframe src="https://player.vimeo.com/video/306117065" width="640" height="400" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
@@ -185,7 +189,8 @@
     		<div class="content takeaway">
     			<h3>TAKEAWAYS</h3>
     			<p>
-    				This project allowed me to understand how important something that is as simple as the navigation placement can affect how people interact with your product. Also, knowing your market/target user plays the biggest part in your success as a company. I believe that as the industries evolve, so should we.
+    				Although we were able to successfully portray the idea of using AR technology and gained incredible insight from testing and retesting the AR rendering, I would have liked to explore a way to prototype using actual AR software and have access to the users’ camera to display real room placement for their bikes. Overall I really enjoyed working with this client because I was able to learn a new technology that I had very little experience with. I am now completely intrigued with using this technology with more products in the future.
+            
     				<br>
     				<br>
     				<em>Thank You For Reading!!</em>
@@ -197,8 +202,9 @@
 						<a href="index.html">P5 PROJECT</a>
 						<a href="linus.html">LINUS BIKES</a>
 						<a href="legit-bud.html">LEGIT BUD STORE</a>
-						<a href="#about">ABOUT</a>
+						<a href="index.html#about">ABOUT</a>
 						<a href="contact.html">CONTACT</a>
+                        <a href="contact.html">ARTIFACTS</a>
                         <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 				</div>
                 </div>
