--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
     	<div class="pimg1">
                 <nav>
-                    <img src="images/taty-red-sig@3x.png" width="200" height="80"><strong>UX Designer | Developer</strong>
+                    <img src="images/taty-red-sig@3x.png" width="200" height="80">
                     <ul>
                         <li><a href="#about">ABOUT</a>
                         </li>
