--- a/legit-bud.html
+++ b/legit-bud.html
@@ -31,7 +31,7 @@
     			</p>
     			</div>
     			<div class="icons">
-    				<figure><img src="images/profile-icon@3x.png" alt="Profile Icon" class="responsive"><figcaption><br>UX/UI Designer</figcaption></figure>
+    				<figure class="icon-1"><img src="images/profile-icon@3x.png" alt="Profile Icon" class="responsive"><figcaption><br>UX/UI Designer</figcaption></figure>
     				<figure><img src="images/sprint-icon@3x.png" alt="Sprint Icon" class="responsive"><figcaption>3 Week Sprint</figcaption></figure>
     				<figure><img src="images/desktop-icon@3x.png" alt="Desktop Icon" class="responsive"><figure>Web Platform</figure></figure>
     			</div>
@@ -52,13 +52,13 @@
     		<div class="challenge-2">
     			<div>
     				<p>
-    					Users depend on the flexibility and urgency the cannabis delivery service offers them. The conflict of time and mobility increases the demand. Based on user interviews and competitive &amp; comparative analysis, these would be our target users.
+    					<strong class="call-text">Users depend on the flexibility and urgency the cannabis delivery service offers them. The conflict of time and mobility increases the demand. Based on user interviews and competitive &amp; comparative analysis, these would be our target users.</strong>
     				</p>
     			</div>
     		</div>
     		<div class="challenge-3">
     			<div class="support">
-    				<figure><img src="images/lbs-original-images@3x.png" alt="Infograph" class="responsive" height="400" width="500"><figcaption>Legit Original Website</figcaption></figure>
+    				<img src="images/lbs-original-images@3x.png" alt="Infograph" class="responsive" height="400" width="500">
     			</div>
     			<div class="challenge-info">
     				<p>
@@ -73,13 +73,13 @@
     		</div>
     		<div class="content pain-point">
     			<div class="pain-1">
-    				<h3>KEY</h3>
+    				<h3><strong>KEY</strong></h3>
     			<p>
     				Can you think about a time where you visited a site and couldn’t find what you were looking for because the options led you down a path that caused you to eventually give up?
     			</p>
     			</div>
     			<div class="pain-2">
-    				<h3>PAIN</h3>
+    				<h3><strong>PAIN</strong></h3>
     			<p>
     				What about when you go to buy an item online and you get to the checkout process and start to feel overwhelmed?
     				<ul class="bullet">
@@ -91,7 +91,7 @@
     			</p>
     			</div>
     			<div class="pain-1">
-    				<h3>POINTS</h3>
+    				<h3><strong>POINTS</strong></h3>
     			<p>
     				After this long drawn out process, is buying this item even worth it? Studies show that 27% of users will abandon the website if the process is too long and complicated. See Below:
     			</p>
@@ -106,13 +106,13 @@
     			</div>
     			<div>
     				<p>
-    					Users want a quick, common and easy process that avoids unnecessary form fields and the pressure to subscribe and be bombarded with junk mail or advertising calls. My users gave me an idea of what they wanted:
+    					<strong class="call-text">Users want a quick, common and easy process that avoids unnecessary form fields and the pressure to subscribe and be bombarded with junk mail or advertising calls. My users gave me an idea of what they wanted:</strong>
     				</p>
     			</div>
     		</div>
     		<div class="pain-point-3">
     			<div class="support">
-    				<figure><img src="images/user-interview-quotes@3x.png" alt="Infograph" class="responsive" height="400" width="500"><figcaption>User Interview Quotes</figcaption></figure>
+    				<span class="quotes-1"><strong><em>"I want to find a deal. What can give me the biggest bang for my buck?"</em></strong></span>
     			</div>
     			<div class="pp3">
     				<p>
@@ -193,8 +193,9 @@
 						<a href="index.html">P5 PROJECT</a>
 						<a href="linus.html">LINUS BIKES</a>
 						<a href="legit-bud.html">LEGIT BUD STORE</a>
-						<a href="#about">ABOUT</a>
+						<a href="index.html#about">ABOUT</a>
 						<a href="contact.html">CONTACT</a>
+                        <a href="contact.html">ARTIFACTS</a>
                         <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 				</div>
                 </div>
