--- a/legit-bud.html
+++ b/legit-bud.html
@@ -6,13 +6,14 @@
     <meta http-eqiuv="X-UA-Compatible" content="ie=edge">
 	<link href="https://fonts.googleapis.com/css?family=Volkhov" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/main.css">
     <title>Legit Bud Store</title>
 </head>
 <body>
 	<header>
 	<nav>
-        <img src="images/legitbudstore-logo-revised.png" width="200" height="40">
+        <a href="index.html"><img src="images/taty-red-sig@3x.png" width="200" height="80"></a>
             <ul>
             	<li><a href="index.html#about">ABOUT</a>
                	</li>
@@ -186,7 +187,11 @@
     				This project allowed me to understand how important something that is as simple as the navigation placement can affect how people interact with your product. Also, knowing your market/target user plays the biggest part in your success as a company. I believe that as the industries evolve, so should we.
     				<br>
     				<br>
-    				<em>Thank You For Reading!!</em>
+    				<em>Feel free to discuss with me further!</em>
+                    <br>
+                    <br>
+                    <a href="https://www.linkedin.com/in/tatiannapiercy/"><i class="fa fa-linkedin fa-2x"></i></a>
+                    <a href="mailto:tatianna.piercy@gmail.com"><i class="fa fa-envelope fa-2x"></i></a>
     			</p>
             </div>
     		</div>
