--- a/linus.html
+++ b/linus.html
@@ -7,12 +7,13 @@
 	<link href="https://fonts.googleapis.com/css?family=Volkhov" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Linus Bike Store</title>
 </head>
 <body>
 	<div class="linus">
 	<nav>
-        <img src="images/linus-bike-logo.png" alt="Linus Bikes Logo" width="100" height="100">
+        <a href="index.html"><img src="images/taty-red-sig@3x.png" width="200" height="80"></a>
             <ul>
             	<li><a href="index.html#about">ABOUT</a>
                	</li>
@@ -195,8 +196,12 @@
             
     				<br>
     				<br>
-    				<em>Thank You For Reading!!</em>
-    			</p>
+    				<em>Feel free to discuss with me further!</em>
+                    <br>
+                    <br>
+                    <a href="https://www.linkedin.com/in/tatiannapiercy/"><i class="fa fa-linkedin fa-2x"></i></a>
+                    <a href="mailto:tatianna.piercy@gmail.com"><i class="fa fa-envelope fa-2x"></i></a>
+    			     </p>
             </div>
     		</div>
 				<div class="navbar" id="myNavbar">
