Choisi.html added
moved about me to a single page and updated lines in work pages

--- a/legit-bud.html
+++ b/legit-bud.html
@@ -13,9 +13,11 @@
 <body>
 	<header>
 	<nav>
-        <a href="index.html"><img src="images/taty-red-sig@3x.png" width="200" height="80"></a>
+        <a href="index.html"><img src="images/trans-signature.png" width="200" height="80"></a>
             <ul>
-            	<li><a href="index.html#about">ABOUT</a>
+                <li><a href="index.html">HOME</a>
+                </li>
+            	<li><a href="about.html">ABOUT</a>
                	</li>
                 <li><a href="index.html#work">WORK</a></li>
             </ul>
@@ -71,15 +73,14 @@
     				</p>
     			</div>
     		</div>
+            <h2><strong>KEY PAIN POINTS</strong></h2>
     		<div class="content pain-point">
     			<div class="pain-1">
-    				<h3><strong>KEY</strong></h3>
     			<p>
     				Can you think about a time where you visited a site and couldn’t find what you were looking for because the options led you down a path that caused you to eventually give up?
     			</p>
     			</div>
     			<div class="pain-2">
-    				<h3><strong>PAIN</strong></h3>
     			<p>
     				What about when you go to buy an item online and you get to the checkout process and start to feel overwhelmed?
     				<ul class="bullet">
@@ -91,7 +92,6 @@
     			</p>
     			</div>
     			<div class="pain-1">
-    				<h3><strong>POINTS</strong></h3>
     			<p>
     				After this long drawn out process, is buying this item even worth it? Studies show that 27% of users will abandon the website if the process is too long and complicated. See Below:
     			</p>
@@ -182,8 +182,6 @@
                 <div class="takeaway">
     			<h3>TAKEAWAYS</h3>
     			<p>
-                    <strong><em>** To see more of the research and design process, please click on the ARTIFACTS link below **</em></strong>
-                    <br>
     				This project allowed me to understand how important something that is as simple as the navigation placement can affect how people interact with your product. Also, knowing your market/target user plays the biggest part in your success as a company. I believe that as the industries evolve, so should we.
     				<br>
     				<br>
@@ -197,11 +195,10 @@
     		</div>
 				<div class="navbar" id="myNavbar">
 						<a href="index.html">HOME</a>
-						<a href="index.html">P5 PROJECT</a>
-						<a href="linus.html">LINUS BIKES</a>
-						<a href="legit-bud.html">LEGIT BUD STORE</a>
-						<a href="index.html#about">ABOUT</a>
-                        <a href="artifacts.html">ARTIFACTS</a>
+                        <a href="choisi.html">CHOISI</a>
+                        <a href="linus.html">LINUS BIKES</a>
+                        <a href="legit-bud.html">LEGIT BUD STORE</a>
+                        <a href="about.html">ABOUT</a>
                         <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 				</div>
 			
