--- a/linus.html
+++ b/linus.html
@@ -13,9 +13,11 @@
 <body>
 	<div class="linus">
 	<nav>
-        <a href="index.html"><img src="images/taty-red-sig@3x.png" width="200" height="80"></a>
+        <a href="index.html"><img src="images/trans-signature.png" width="200" height="80"></a>
             <ul>
-            	<li><a href="index.html#about">ABOUT</a>
+                <li><a href="index.html">HOME</a>
+                </li>
+            	<li><a href="about.html">ABOUT</a>
                	</li>
                 <li><a href="index.html#work">WORK</a></li>
             </ul>
@@ -32,7 +34,7 @@
     			</div>
     			<div class="icons">
     				<figure class="icon-1"><img src="images/shoe-sprint-icon@3x.png" alt="Sprint Icon" class="responsive"><figcaption>2 Week Sprint</figcaption></figure>
-                    <figure><img src="images/group-icon@3x.png" alt="Profile Icon" class="responsive"><figcaption>UX Researcher<br>UI Designer<br>Project Manager</figcaption></figure>
+                    <figure><img src="images/group-icon@3x.png" alt="Profile Icon" class="responsive"><figcaption><strong>Group Project</strong><br>UX Researcher<br>UI Designer<br>Project Manager</figcaption></figure>
     				<figure><img src="images/ios-app-icon@3x.png" alt="iPhone Icon" class="responsive"><figcaption>iOS Native App</figcaption></figure>
     			</div>
     		</div>
@@ -75,15 +77,14 @@
     				</p>
     			</div>
     		</div>
+             <h2><strong>KEY PAIN POINTS</strong></h2>
     		<div class="content pain-point">
     			<div class="pain-1">
-    				<h3><strong>KEY</strong></h3>
     			<p>
     				How many times have you ordered an item online only to return it because it wasn't what you expected or didn't fit even though it said it would?
     			</p>
     			</div>
     			<div class="pain-2">
-    				<h3><strong>PAIN</strong></h3>
     			<p>
     				What about when a company promotes "personalization", yet there's no way to make the product your own?
     				<ul class="bullet">
@@ -94,8 +95,7 @@
     				</ul>
     			</p>
     			</div>
-    			<div class="pain-1">
-    				<h3><strong>POINTS</strong></h3>
+    			<div class="pain-1">	
     			<p>
     				Lastly, have you ever followed that company on social media for the culture only to find out there really isn't one? The social usage motivation with the biggest increase since 2015 is using social to research products and brand's purpose.
     			</p>
@@ -190,8 +190,6 @@
                 <div class="takeaway">
     			<h3>TAKEAWAYS</h3>
     			<p>
-                    <strong><em>** To see more of the research and design process, please click on the ARTIFACTS link below **</em></strong>
-                    <br>
     				Although we were able to successfully portray the idea of using AR technology and gained incredible insight from testing and retesting the AR rendering, I would have liked to explore a way to prototype using actual AR software and have access to the users’ camera to display real room placement for their bikes. Overall I really enjoyed working with this client because I was able to learn a new technology that I had very little experience with. I am now completely intrigued with using this technology with more products in the future.
             
     				<br>
@@ -206,11 +204,10 @@
     		</div>
 				<div class="navbar" id="myNavbar">
 						<a href="index.html">HOME</a>
-						<a href="index.html">P5 PROJECT</a>
-						<a href="linus.html">LINUS BIKES</a>
-						<a href="legit-bud.html">LEGIT BUD STORE</a>
-						<a href="index.html#about">ABOUT</a>
-                        <a href="artifacts.html">ARTIFACTS</a>
+                        <a href="choisi.html">CHOISI</a>
+                        <a href="linus.html">LINUS BIKES</a>
+                        <a href="legit-bud.html">LEGIT BUD STORE</a>
+                        <a href="about.html">ABOUT</a>
                         <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 				</div>
 			</div>
