--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <nav>
                     <img src="images/taty-red-sig@3x.png" width="200" height="80">
                     <ul>
-                        <li><a href="#about">ABOUT</a>
+                        <li><a href="about.html">ABOUT</a>
                         </li>
                         <li><a href="#work">WORK</a></li>
                     </ul>
@@ -24,7 +24,7 @@
         </div>
 
         <section class="section section-light" id="work">
-            <h2>Projects</h2>
+            <h2>My Work</h2>
             <p>From website redesign to native app development, the soul focus is the user. "How might we make this better?"
             </p>
         </section>
@@ -58,51 +58,20 @@
         </section>
 
         <div class="pimg4">
-            <div class="ptext"><a href="coming-soon.html">
+            <div class="ptext"><a href="choisi.html">
                 <span class="border">
-                    Coming Soon
+                    Choisi
                 </span></a>
             </div>
         </div>
 
-        <section id="about">
-            <div class="pimg5">
-                <div class="content">
-                    <div class="buffer">
-
-                    </div>
-
-                    <div class="about-text">
-                        <h2><span class="alert-text">.Plain and Simple</span></h2>
-                            <p>
-                                I want to <span class="alert-text"><strong>create things that MATTER</strong></span>. From Law Enforcement Officer to Sales Manager to now Designer, I have learned that my passion is <span class="alert-text"><strong>PEOPLE</strong></span>. Understanding and really listening to what works for them wakes me up each morning with a smile on my face. Although I've fallen flat on my face from time to time, I pride myself in <span class="alert-text"><strong>being WRONG</strong></span> and working through the night just to get it right. Even then, the results may be inconclusive, lol. They were just gifts of improvement telling me to look harder/dig deeper. I strive to be better with each failed attempt and my addiction to learning pushes the meter for me.
-                                <br>
-                                <br>
-                                .... or it could be my addiction to pizza.... who knows
-                                <br>
-                                <br>
-                                All in all, if Pinky and The Brain thought they could take over/change the world, I don't see why I can't try.
-                                <br>
-                                <br>
-                                .... oh yeah, I can code too. This portfolio has been coded using <span class="alert-text"><strong>HTML, CSS and Javascript by myself</strong></span>.
-                                <br>
-                                <br>
-                                Let's <span class="alert-text"><strong>chat</strong></span>. I'm sure we can come up with some ways to change the world <span class="alert-text"><strong>together</strong></span>.
-                            </p>
-
-                            <a href="https://www.linkedin.com/in/tatiannapiercy/"><i class="fa fa-linkedin fa-2x"></i></a>
-                            <a href="mailto:tatianna.piercy@gmail.com"><i class="fa fa-envelope fa-2x"></i></a>
-                    </div>
-                </div>
-            </div>
-        </section>
+        
         <div class="navbar" id="myNavbar">
                         <a href="index.html">HOME</a>
-                        <a href="index.html">P5 PROJECT</a>
+                        <a href="choisi.html">CHOISI</a>
                         <a href="linus.html">LINUS BIKES</a>
                         <a href="legit-bud.html">LEGIT BUD STORE</a>
-                        <a href="index.html#about">ABOUT</a>
-                        <a href="artifacts.html">ARTIFACTS</a>
+                        <a href="about.html">ABOUT</a>
                         <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
         </div>
         <script>
