html, css & js changes
inputted images onto choisi.html
added script.js for scroll button
changed hero.css to reflect main.css

--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
                                 All in all, if Pinky and The Brain thought they could take over/change the world, I don't see why I can't try.
                                 <br>
                                 <br>
-                                .... oh yeah, I can code too. This portfolio has been coded using <span class="alert-text"><strong>HTML, CSS and Javascript by myself</strong></span>.
+                                .... oh yeah, I can code too. This portfolio has been coded using <span class="alert-text"><strong>HTML5, CSS3 and Javascript by myself</strong></span>.
                                 <br>
                                 <br>
                                 Let's <span class="alert-text"><strong>chat</strong></span>. I'm sure we can come up with some ways to change the world <span class="alert-text"><strong>together</strong></span>.
