--- a/index.html
+++ b/index.html
@@ -9,70 +9,87 @@
         <link rel="stylesheet" href="css/hero.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <title>Tatianna Piercy &verbar; Designer/Developer</title>
+        <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="/favicon.ico" type="image/x-icon">
     </head>
     <body>
     	<div class="pimg1">
                 <nav>
-                    <img src="images/taty-red-sig@3x.png" width="200" height="80">
+                    <img src="images/trans-signature.png" width="200" height="80">
                     <ul>
                         <li><a href="about.html">ABOUT</a>
                         </li>
                         <li><a href="#work">WORK</a></li>
                     </ul>
                 </nav>
-            </div>
+
+                <div class="text-block">
+                    <div class="text"> 
+                        <p><em>With a compassion and dedication to User Experience, I give my users a permanent place to be heard.</p>
+                        <p>Who am I?</p></em>
+                        <h1>Tatianna Piercy</h1>
+                        <h4>UX/UI Designer | Front-End Web Developer</h4>
+                    </div>
+                </div>
+        </div>
+                
         </div>
 
-        <section class="section section-light" id="work">
-            <h2>My Work</h2>
-            <p>From website redesign to native app development, the soul focus is the user. "How might we make this better?"
-            </p>
-        </section>
+        <section id="section03" class="demo"><a href="#section04"><span></span></a> 
+                </section>
 
-         <div class="pimg2">
-            <div class="ptext"><a href="linus.html">
+        <div class="section section-light" id="work">
+            <h2>My Work</h2>
+            <p>From website redesign to native app development, the sole focus is the user. "How might we make this better?"
+            </p>
+        </div>
+
+         <div class="pimg4">
+            <div class="ptext"><a href="choisi.html">
                 <span class="border">
-                    Linus Bikes
+                    choisi e-commerce creation
                 </span></a>
             </div>
         </div>
 
-        <section class="section section-dark">
+        <div class="section section-dark">
             <p>
                 <em>“Good design is like a refrigerator—when it works, no one notices, but when it doesn’t, it sure stinks.”</em> –Irene Au
             </p>
-        </section>
+        </div>
+
+        <div class="pimg2">
+            <div class="ptext"><a href="linus.html">
+                <span class="border">
+                    linus bikes retail ios native app
+                </span></a>
+            </div>
+        </div>
+
+        <div class="section section-dark">
+            <p>
+                <em>“Socrates said, “Know thyself.” I say, “Know thy users.” And guess what? They don’t think like you do.”</em> -Joshua Brewer
+            </p>
+        </div>
 
         <div class="pimg3">
             <div class="ptext"><a href="legit-bud.html">
                 <span class="border">
-                    Legit Bud
-                </span></a>
-            </div>
-        </div>
-
-        <section class="section section-dark">
-            <p>
-                <em>“Socrates said, “Know thyself.” I say, “Know thy users.” And guess what? They don’t think like you do.”</em> -Joshua Brewer
-            </p>
-        </section>
-
-        <div class="pimg4">
-            <div class="ptext"><a href="choisi.html">
-                <span class="border">
-                    Choisi
+                    legit bud store website redesign
                 </span></a>
             </div>
         </div>
 
         
         <div class="navbar" id="myNavbar">
+                        <div class="navbar-inner">
                         <a href="index.html">HOME</a>
                         <a href="choisi.html">CHOISI</a>
                         <a href="linus.html">LINUS BIKES</a>
                         <a href="legit-bud.html">LEGIT BUD STORE</a>
                         <a href="about.html">ABOUT</a>
                         <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+                        </div>
         </div>
         <script>
     function myFunction() {
