--- a/legit-bud.html
+++ b/legit-bud.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/main.css">
     <title>Legit Bud Store</title>
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
 <body>
 	<header>
@@ -102,7 +104,7 @@
     		<br>
     		<div class="pain-point-2">
     			<div class="support">
-    				<img src="images/lbs-checkout-research.jpg" alt="Infograph" class="responsive">
+    				<img src="images/lbs-checkout-research.jpg" alt="Infograph" width="640" height="400" class="responsive">
     			</div>
     			<div>
     				<p>
@@ -178,6 +180,7 @@
     				<iframe src="https://player.vimeo.com/video/306117065" width="640" height="400" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     			</div>
     		</div>
+        </div>
     		<div class="content takeaway">
                 <div class="takeaway">
     			<h3>TAKEAWAYS</h3>
@@ -194,12 +197,14 @@
             </div>
     		</div>
 				<div class="navbar" id="myNavbar">
+                    <div class="navbar-inner">
 						<a href="index.html">HOME</a>
                         <a href="choisi.html">CHOISI</a>
                         <a href="linus.html">LINUS BIKES</a>
                         <a href="legit-bud.html">LEGIT BUD STORE</a>
                         <a href="about.html">ABOUT</a>
                         <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+                    </div>
 				</div>
 			
     </main>
